kubernetes/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-deployment
  labels:
    app: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: market-strategist-backend:latest
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "app.workers.celery_app", "worker", "--loglevel=info"]
